--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "1970186643 <1970186643@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --hot --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
@@ -15,6 +15,8 @@
     "better-scroll": "^1.15.2",
     "express": "^4.17.1",
     "fastclick": "^1.0.6",
+    "node-sass": "4.14.1",
+    "sass": "^1.32.11",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.4.1",
@@ -58,6 +60,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.3.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
