--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.4.1",
+    "vant": "^2.12.14",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
